<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/darker_gray">
    <item android:id="@+id/action_favorites" android:title="@string/action_favorites" android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_channels" android:title="@string/action_channels" android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_categories" android:title="@string/action_categories" android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_select_date" android:title="@string/action_select_date" android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_update" android:title="@string/action_update" android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:orderInCategory="100" app:showAsAction="never"/>
</menu>
